--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,15 +3,12 @@ body, html {
 	margin: 0;
 	width: 100%;
 	height: 100%;
-	text-align: center;
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
+	text-align: left;
 }
 
 #drop {
-	margin: auto;
+	margin: 45px;
+	padding: 0;
 	width: calc(100% - 100px);
 	height: calc(100% - 100px);
 	text-align: center;
@@ -26,7 +23,19 @@ body, html {
 	border-color: black !important;
 }
 
-.split {
-	height: 10px;
-	background: gray;
+div.object, div.array {
+	position: relative;
+	left: 20px;
+	padding-left: 5px;
+	border-left: 1px dotted gray;
+	width: 100%;
 }
+
+span.key {
+	padding-right: 10px;
+}
+
+span.value, span.arr_element {
+	text-align: right;
+}
+
